--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "private": true,
-  "name": "template-for-proposals",
-  "description": "A repository template for ECMAScript proposals.",
+  "name": "naming-destructed-variables",
+  "description": "A repository for ECMAScript proposal about naming destructed variables.",
   "scripts": {
     "start": "npm run build-loose -- --watch",
     "build": "npm run build-loose -- --strict",
-    "build-loose": "node -e 'fs.mkdirSync(\"build\", { recursive: true })' && ecmarkup --load-biblio @tc39/ecma262-biblio --verbose spec.emu build/index.html --lint-spec"
+    "build-loose": "node -e \"fs.mkdirSync(\"\"build\"\", { recursive: true })\" && ecmarkup --load-biblio @tc39/ecma262-biblio --verbose spec.emu build/index.html --lint-spec",
+    "update": "npm install --save-dev ecmarkup@latest && npm install --save-dev --save-exact @tc39/ecma262-biblio@latest"
   },
-  "homepage": "https://github.com/tc39/template-for-proposals#readme",
+  "homepage": "https://github.com/EzioMercer/naming-destructed-variables#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tc39/template-for-proposals.git"
+    "url": "git+https://github.com/EzioMercer/naming-destructed-variables.git"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@tc39/ecma262-biblio": "^2.1.2816",
-    "ecmarkup": "^20.0.0"
-  },
   "engines": {
     "node": ">= 18"
+  },
+  "devDependencies": {
+    "@tc39/ecma262-biblio": "2.1.2888",
+    "ecmarkup": "^21.2.1"
   }
 }
